# discodpyBot

./: README.md  main.py  prefix.json  pyproject.toml
animeAPI/: search.py
animechan/: randomq.py
characterSearch/: character.py
cogs/: 8ball.py  GameGuildSystem.py  GameInfo.py  GameRegister.py  GameSell.py  GameShop.py  Ginvite.py  MODMAIL.py  afk.py  allguild.py  amongus.py  animequotes.py  animesearch.py  animesearchNo.py  animesearchOne.py  autohen.py  avatar.py  ban.py  banner.py  betcoin.py  bible.py  blackjack.py  blurpify.py  changemymind.py  characterSearch.py  choice.py  clyde.py  comment.py  createchannel.py  customprefix.py  dailycoin.py  deepfry.py  deletechannel.py  dm.py  ecobeg.py  ev.py  fact.py  food.py  gr.py  help.py  (+46 more)
danbooru/: getImage.py
imagegeneration/: getImage.py
malapipy/: anime.py  make-token.py  malUser.py  manga.py
malapipy/docs/: conf.py
malapipy/docs/_build/doctrees/: environment.pickle  index.doctree
malapipy/docs/_build/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
malapipy/docs/_build/html/_sources/: index.rst.txt
mangafreak/: mangaPages.py
memegeneration/: ew.py  face.py  hellno.py  spongebob.py  worthless.py  yeet.py
nbook/: nhen.py  nhenIMG.py
nekobotAPI/: imageGrabber.py
osu/: beatmap.py  init.py  main.py  user.py
popcatapi/: popcatAI.py
r3PI/: media.py
tenorAPI/: getgif.py
urbanAPIres/: search.py
wallpaperAPI/: getWallpaper.py
weatherAPI/: weather.py
xkcd/: comic.py
