[tool.poetry]
name = "repl_python3_pythonbot"
version = "0.1.0"
description = ""
authors = ["reset#5576 <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^2.0.0"
asyncpraw = "^7.2.0"
mal-api = "^0.4.0"
mal = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
